syntax = "proto3";

package version;
option go_package = "versionpb";

message Version {
  string id = 1;
  string name = 2;
  string namespace = 3;
  Entrypoint entrypoint = 4;
  repeated Config config = 5;
  repeated Workflow workflows = 6;
  string mongo_uri = 7;
  string mongo_db_name = 8;
  string influx_uri = 9;

  message Config {
    string key = 1;
    string value = 2;
  }

  message Entrypoint {
    string proto_file = 1;
    string image = 2;
  }

  message Workflow {
    message Node {
      string id = 1;
      string name = 2;
      string image = 3;
      string src = 4;
    }

    message Edge {
      string id = 1;
      string fromNode = 2;
      string toNode = 3;
    }

    string id = 1;
    string name = 2;
    string entrypoint = 3;
    repeated Node nodes = 4;
    repeated Edge edges = 5;
  }
}

message Request {
  Version version = 1;
}

message Response {
  string message = 2;
}

service VersionService {
  rpc Start (Request) returns (Response);
  rpc Stop (Request) returns (Response);
  rpc Publish (Request) returns (Response);
  rpc Unpublish (Request) returns (Response);
  rpc UpdateConfig (Request) returns (Response);
};
